# djangoProject

./: db.sqlite3  pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: models.py
companies/migrations/: 0001_initial.py  0002_alter_company_options.py
djangoProject/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/vacancies/: vacancie_list_test.py  vacancy_create_test.py  vacancy_retrieve_test.py
vacancies/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py  0007_vacancy_min_experience.py  0008_vacancy_updated_at.py
